# bazelgopackagesdriver

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel_versions.bzl  go.mod  go.sum
cmd/bazelgopackagesdriver/: BUILD.bazel  bazel.go  bazel_json_builder.go  flatpackage.go  json_packages_driver.go  main.go  packageregistry.go  utils.go
cmd/gopackagesdriverclient/: BUILD.bazel  gopackagesdriverclient.go
internal/cmdutil/: BUILD.bazel  cmdutil.go
internal/configuration/: BUILD.bazel  configuration.go
internal/idleness/: BUILD.bazel  idleness.go  idleness_test.go
internal/runfiles/: BUILD.bazel  runfiles.go
internal/test/bazel_testing/: BUILD.bazel  bazel_testing.go  bazel_testing_cache.go  cache.bzl
internal/test/bazel_testing/bazellogs/: BUILD.bazel  bazellogs_workspace.go
internal/test/bazel_testing/cache_test/: BUILD.bazel  cache_test.go
internal/test/workspace_ext_dep_test/: BUILD.bazel  workspace_ext_dep_test.go
internal/test/workspace_test/: BUILD.bazel  workspace_test.go
proto/: BUILD.bazel  gopackagesdriver.proto
proto/bazelworkspacelogpb/: BUILD  bazelworkspacelogpb.pb.go
proto/gopackagesdriverpb/: BUILD.bazel  gopackagesdriverpb.pb.go  gopackagesdriverpb_grpc.pb.go
protocol/: BUILD.bazel  driver_request.go  driver_response.go  flatpackage.go
tests/proto/: BUILD.bazel  pleasework.proto
tests/test1/: BUILD.bazel  test1_test.go
