load("//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gopackagesdriver_lib",
    srcs = [
        "bazel.go",
        "bazel_json_builder.go",
        "build_context.go",
        "json_packages_driver.go",
        "main.go",
        "packageregistry.go",
        "utils.go",
    ],
    importpath = "github.com/bazelbuild/rules_go/go/tools/gopackagesdriver",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gopackagesdriver",
    embed = [":bazelgopackagesdriver_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "bazelgopackagesdriver_lib",
    srcs = [
        "bazel.go",
        "bazel_json_builder.go",
        "build_context.go",
        "flatpackage.go",
        "json_packages_driver.go",
        "main.go",
        "packageregistry.go",
        "utils.go",
    ],
    importpath = "github.com/gonzojive/bazelgopackagesdriver/cmd/bazelgopackagesdriver",
    visibility = ["//visibility:private"],
    deps = [
        "//protocol",
        "@com_github_golang_glog//:go_default_library",
    ],
)
