load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gopackagesdriverclient_lib",
    srcs = ["gopackagesdriverclient.go"],
    importpath = "github.com/gonzojive/bazelgopackagesdriver/cmd/gopackagesdriverclient",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cmdutil",
        "//internal/configuration",
        "//proto/gopackagesdriverpb",
        "//protocol",
        "@com_github_golang_glog//:glog",
        "@com_github_jbenet_go_context//io",
        "@com_github_johnsiilver_golib//development/portpicker",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "gopackagesdriverclient",
    embed = [":gopackagesdriverclient_lib"],
    visibility = ["//visibility:public"],
)
