load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "configuration",
    srcs = ["configuration.go"],
    importpath = "github.com/gonzojive/bazelgopackagesdriver/internal/configuration",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cmdutil",
        "//proto/gopackagesdriverpb",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)
