load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@build_stack_rules_proto//rules:proto_compiled_sources.bzl", "proto_compiled_sources")

# proto_compile(
#     name = "gopackagesdriver_go_proto",
#     # srcs = [
#     #     "gopackagesdriverpb.pb.go",
#     #     "gopackagesdriverpb_grpc.pb.go",
#     # ],
#     outputs = [
#         "gopackagesdriverpb.pb.go",
#         "gopackagesdriverpb_grpc.pb.go",
#     ],
#     output_mappings = [
#         "gopackagesdriverpb.pb.go=github.com/gonzojive/bazelgopackagesdriver/proto/gopackagesdriverpb/gopackagesdriver.pb.go",
#         "gopackagesdriverpb_grpc.pb.go=github.com/gonzojive/bazelgopackagesdriver/proto/gopackagesdriverpb/gopackagesdriver_grpc.pb.go",
#     ],
#     plugins = [
#         "@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go",
#         "@build_stack_rules_proto//plugin/grpc/grpc-go:protoc-gen-go-grpc",
#     ],
#     proto = "gopackagesdriverpb_proto",
#     visibility = ["//proto:__subpackages__"],
# )

# Regenerate compiled source with
# bazel run  //proto/gopackagesdriverpb:compiled_sources.update
proto_compiled_sources(
    name = "compiled_sources",
    srcs = [
        "gopackagesdriverpb.pb.go",
        "gopackagesdriverpb_grpc.pb.go",
    ],
    output_mappings = [
        "gopackagesdriverpb.pb.go=github.com/gonzojive/bazelgopackagesdriver/proto/gopackagesdriverpb/gopackagesdriver.pb.go",
        "gopackagesdriverpb_grpc.pb.go=github.com/gonzojive/bazelgopackagesdriver/proto/gopackagesdriverpb/gopackagesdriver_grpc.pb.go",
    ],
    plugins = [
        "@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go",
        "@build_stack_rules_proto//plugin/grpc/grpc-go:protoc-gen-go-grpc",
    ],
    proto = "//proto:gopackagesdriverpb_proto",
    visibility = ["//proto:__subpackages__"],
)

go_library(
    name = "gopackagesdriverpb",
    srcs = [
        "gopackagesdriverpb.pb.go",
        "gopackagesdriverpb_grpc.pb.go",
    ],
    importpath = "github.com/gonzojive/bazelgopackagesdriver/proto/gopackagesdriverpb",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
