load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pleaseworkpb_proto",
    srcs = ["pleasework.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pleaseworkpb",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/gonzojive/bazelgopackagesdriver/tests/proto/pleaseworkpb",
    proto = ":pleaseworkpb_proto",
    visibility = ["//visibility:public"],
)
