load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bazel_testing",
    srcs = [
        "bazel_testing.go",
        "bazel_testing_cache.go",
    ],
    importpath = "github.com/gonzojive/bazelgopackagesdriver/internal/test/bazel_testing",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/runfiles",
        "//internal/test/bazel_testing/bazellogs",
        "//proto/bazelworkspacelogpb",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_tools//txtar",
    ],
)
